# mmDNS

./: .gitignore  README.md  meson.build
src/: main.cc  mdns_client.hpp  mdns_message.cc  mdns_message.hpp  mdns_message_codec.cc  mdns_message_codec.hpp  mdns_service_register.hpp
src/detail/: config.hpp  mdns_diag.cc  mdns_diag.hpp
src/net/: net_steam.hpp
tests/: test_data.hpp
